# shard-mobile

./: .gitignore  CODE_OF_CONDUCT.md  README.md  ShardKit.podspec  VMLKit.podspec
.circleci/: config.yml
android/: build.gradle  settings.gradle
android/core/: build.gradle
android/gradle/wrapper/: gradle-wrapper.properties
android/shards/: build.gradle
core/: Cargo.toml  Makefile
core/android/: Cargo.toml
core/android/src/: lib.rs
core/ios/: Cargo.toml
core/ios/src/: lib.rs
core/scripts/: install-android.sh  install-ios.sh
core/src/: android.rs  lib.rs
core/tests/: render.rs  test.rs
ios/: .travis.yml  VMLBaseProps.swift  VMLKit.podspec
ios/Example/: Podfile
ios/Example/ShardKit/: AlertLauncher.swift  AppDelegate.swift  ExamplesLauncher.swift  Info.plist  ScanViewController.swift  Shard.swift  ShardHandler.swift  ShardViewController.swift  ShardsTableViewController.swift
ios/Example/ShardKit.xcodeproj/: project.pbxproj
ios/Example/ShardKit.xcworkspace/: contents.xcworkspacedata
ios/Example/Tests/: BaseViewImplSpec.swift  ImageViewImplSpec.swift  JSONSpec.swift  JsonValueSpec.swift  ScrollViewImplSpec.swift  ShardContextSpec.swift  ShardViewManagerSpec.swift  TextViewImplSpec.swift  UtilsSpec.swift  VMLConfigSpec.swift  VMLContextSpec.swift  VMLImageShadowViewSpec.swift  VMLRootViewSpec.swift  VMLTextShadowViewSpec.swift  VMLViewManagerSpec.swift  VMLYogaShadowViewSpec.swift
ios/Example/VMLKit/: AppDelegate.swift  Info.plist  (+2 more)
ios/Example/VMLKit.xcodeproj/: project.pbxproj
ios/Example/VMLKit.xcworkspace/: contents.xcworkspacedata
(+166 files in other folders)
