[package]
name = "vml"
version = "0.1.0"
authors = ["Emil Sjölander <emil@visly.app>"]
edition = "2018"
publish = false

[dependencies]
json = "0.11.13"

[lib]
name = "vml"
crate-type = ["staticlib", "cdylib"]

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.5", default-features = false }

[profile.release]
lto = true