[package]
name = "android"
version = "0.1.0"
authors = ["Emil Sjölander <emil@visly.app>"]
edition = "2018"
publish = false

[dependencies]
core = { path = ".." }
jni = { version = "0.10.2", default-features = false }
json = "0.11.13"
stretch = { path = "../../../stretch" }

[profile.release]
lto = true

[lib]
name = "vml"
crate-type = ["cdylib"]